added resume link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                        I am currently enrolled in a BTECH degree program specializing in Information Technology (IT).
                      This educational journey underscores my commitment to gaining expertise in IT disciplines and preparing for a successful career in the technology industry.
                     </div>
-                    <div class="btn-pink" id="button"><a href="https://drive.google.com/drive/folders/1dxaqz_ROmk97rdgUKfgM4SXR1_3_2Tcl">Resume</a></div>
+                    <div class="btn-pink" id="button"><a href="https://drive.google.com/file/d/1Xy6Zwd3UCy-g-EhLGBgW10eQFKLnxsaD/view?usp=sharing">Resume</a></div>
                 </div>
             
             <div class="hero-section-right">
